--- a/0x06-unittests_in_js/package.json
+++ b/0x06-unittests_in_js/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha *.test.js"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^5.1.1",
     "mocha": "^10.7.0"
   }
 }
